package com.appointment.api.entity;

/**
 * Enum for Appointment Status
 */
public enum AppointmentStatus {
    PENDING,       
    APPROVED,     
    REJECTED,      
    COMPLETED,     
    CANCELLED,    
    NO_SHOW   
}