package com.appointment.api.entity;

/**
 * Enum for Resource Status
 */
public enum ResourceStatus {
    AVAILABLE,
    IN_USE,
    MAINTENANCE,
    OUT_OF_SERVICE
}
